<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>speed_zone_limiter</name>
  <version>0.1.0</version>
  <description>
    Zone-based speed limiter for ROS 2 Humble navigation stack.
    Intercepts cmd_vel, checks the robot position against a configured
    polygonal slow zone, caps linear velocity, and republishes on cmd_vel_safe.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
